# Online-Retail-Analysis-

./: OnlineRetail.ipynb  README.md  pyproject.toml  requirements.txt
src/online_retail_analysis/: OnlineRetail.py
