[project]
name = "online-retail-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "AH-ojaghi",email = "ojaghiamirhossein325@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlxtend (>=0.23.4,<0.24.0)"
]

[tool.poetry]
packages = [{include = "online_retail_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
